chore: bib update

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -16,7 +16,7 @@
 	month = dec,
 	year = {2006},
 	pages = {179--181},
-	file = {2006_readBeforeCite.pdf:/home/stefanom/GoogleDrive/Zot/2006_readBeforeCite.pdf:application/pdf},
+	file = {Do You Sincerely Want to Be Cited? Or\: Read Before You Cite:/home/stefanom/Zotero/storage/5AH8GY5J/simkin2006.pdf.pdf:application/pdf},
 }
 
 @article{blatov_applied_2014,
@@ -34,7 +34,7 @@
 	month = jul,
 	year = {2014},
 	pages = {3576--3586},
-	file = {Blatov_et_al_2014_Applied_Topological_Analysis_of_Crystal_Structures_with_the_Program_Package.pdf:/home/stefanom/GoogleDrive/Zot/Blatov_et_al_2014_Applied_Topological_Analysis_of_Crystal_Structures_with_the_Program_Package.pdf:application/pdf},
+	file = {blatov_et_al_2014_applied_topological_analysis_of_crystal_structures_with_the_program_package.pdf:/home/stefanom/GoogleDrive/Università/Zot/Crystal Growth & Design/2014/blatov_et_al_2014_applied_topological_analysis_of_crystal_structures_with_the_program_package.pdf:application/pdf},
 }
 
 @article{erdman_reaction_2004,
@@ -52,6 +52,7 @@
 	month = dec,
 	year = {2004},
 	pages = {1163--1171},
+	file = {Erdman_et_al_2004_The_Reaction_of_Hydrazine_with_α‐Cyanocinnamate_Esters.pdf:/home/stefanom/GoogleDrive/Zot/Erdman_et_al_2004_The_Reaction_of_Hydrazine_with_α‐Cyanocinnamate_Esters.pdf:application/pdf;The Reaction of Hydrazine with α‐Cyanocinnamate Esters\: A Caveat:/home/stefanom/Zotero/storage/XEBGHV2I/erdman2004.pdf.pdf:application/pdf;The Reaction of Hydrazine with α‐Cyanocinnamate Esters\: A Caveat:/home/stefanom/Zotero/storage/A5ATJYBF/erdman2004.pdf.pdf:application/pdf},
 }
 
 @article{smith_reactions_1968,
@@ -68,7 +69,7 @@
 	month = feb,
 	year = {1968},
 	pages = {851--855},
-	file = {jo01266a085.pdf:/home/stefanom/GoogleDrive/Zot/jo01266a085.pdf:application/pdf},
+	file = {Reactions of hydrazines with esters and carboxylic acids:/home/stefanom/Zotero/storage/QUJ78VAE/smith1968.pdf.pdf:application/pdf},
 }
 
 @article{nagpal_synthesis_2001,
@@ -85,7 +86,7 @@
 	author = {Nagpal, Anita and Unny, Rashmy and Joshi, P. and Joshi, Y.C.},
 	month = jan,
 	year = {2001},
-	file = {10.1515_hc.2001.7.6.589.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2001.7.6.589.pdf:application/pdf},
+	file = {nagpal_et_al_2001_synthesis_of_1,_3-diketone_and_its_reaction_with_different_n-nucleophiles_(part.pdf:/home/stefanom/GoogleDrive/Università/Zot/Heterocyclic Communications/2001/nagpal_et_al_2001_synthesis_of_1,_3-diketone_and_its_reaction_with_different_n-nucleophiles_(part.pdf:application/pdf},
 }
 
 @article{joshi_synthesis_2004,
@@ -102,7 +103,7 @@
 	author = {Joshi, Y.C. and Joshi, P. and Chauhan, Suresh Singh and Nigam, Sandeep},
 	month = jan,
 	year = {2004},
-	file = {10.1515_hc.2004.10.2-3.249.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2004.10.2-3.249.pdf:application/pdf},
+	file = {10.1515_hc.2004.10.2-3.249.pdf:/home/stefanom/GoogleDrive/Zot/10.1515_hc.2004.10.2-3.249.pdf:application/pdf;joshi_et_al_2004_synthesis_of_novel_pyrazole_derivatives_from_diaryl_1,3-diketones_(part-ii).pdf:/home/stefanom/GoogleDrive/Università/Zot/Heterocyclic Communications/2004/joshi_et_al_2004_synthesis_of_novel_pyrazole_derivatives_from_diaryl_1,3-diketones_(part-ii).pdf:application/pdf;SYNTHESIS OF NOVEL PYRAZOLE DERIVATIVES FROM DIARYL 1,3-DIKETONES (PART-II):/home/stefanom/Zotero/storage/W8PLL9MK/joshi2004.pdf.pdf:application/pdf},
 }
 
 @article{cinar_synthesis_2021,
@@ -116,7 +117,7 @@
 	author = {Çinar, Seda and Eren, Aslı},
 	month = dec,
 	year = {2021},
-	file = {10.15671-hjbc.954044-1830404.pdf:/home/stefanom/GoogleDrive/Zot/10.15671-hjbc.954044-1830404.pdf:application/pdf},
+	file = {çinar_et_al_2022_synthesis_of_new_pyrazole_compounds_via_diketonic_michael_adducts.pdf:/home/stefanom/GoogleDrive/Università/Zot/Hacettepe Journal of Biology and Chemistry/2022/çinar_et_al_2022_synthesis_of_new_pyrazole_compounds_via_diketonic_michael_adducts.pdf:application/pdf},
 }
 
 @article{cetin_synthesis_nodate,
@@ -124,7 +125,6 @@
 	abstract = {In this paper, firstly, 2-(2-(4-bromophenyl)hydrazino)-1-(2-(hydroxyphenyl)-3-phenylpropane-1,3-dione (1), which is a starting material, was synthesized. Then, the new substituted pyrazoles derivatives (2a-e) were obtained via the reaction-starting material and various hydrazines. The structures of newly-synthesized compounds were determined by spectroscopic methods.},
 	language = {en},
 	author = {Çetin, Adnan},
-	file = {Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:/home/stefanom/GoogleDrive/Zot/Baz__ Yeni Pirazollerin Sentezlenmesi[#805848]-1329429.pdf:application/pdf},
 }
 
 @article{fustero_improved_2008,
@@ -142,7 +142,7 @@
 	month = may,
 	year = {2008},
 	pages = {3523--3529},
-	file = {Improved_Regioselectivity_in_Pyrazole_Fo.pdf:/home/stefanom/GoogleDrive/Zot/Improved_Regioselectivity_in_Pyrazole_Fo.pdf:application/pdf},
+	file = {Improved Regioselectivity in Pyrazole Formation through the Use of Fluorinated Alcohols as Solvents\: Synthesis and Biological Activity of Fluorinated Tebufenpyrad Analogs:/home/stefanom/Zotero/storage/7HITF9XB/fustero2008.pdf.pdf:application/pdf},
 }
 
 @article{konkov_synthesis_2009,
@@ -160,25 +160,7 @@
 	month = dec,
 	year = {2009},
 	pages = {1824--1828},
-	file = {S1070428009120124.pdf:/home/stefanom/GoogleDrive/Zot/S1070428009120124.pdf:application/pdf},
-}
-
-@article{bland_rapid_1976,
-	title = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth: a controlled, prospective trial},
-	volume = {124},
-	issn = {0002-9378},
-	shorttitle = {Rapid infusion of sodium bicarbonate and albumin into high-risk premature infants soon after birth},
-	doi = {10.1016/0002-9378(76)90154-x},
-	abstract = {We conducted a controlled, prospective trial to evaluate the effectiveness of rapidly infusing sodium bicarbonate (NaHCO3) and salt-poor albumin into high-risk, premature infants in the first 2 hours of life. Fifty-three infants, randomized into one of four treatment groups, received 8 ml. per kilogram of a solution containing either (A) glucose in water, (B) salt-poor albumin, (C) NaHCO3, or (D) a combination of albumin and NaHCO3. After the initial infusion, the babies received no colloid or alkali solutions until 4 hours of age. We managed them supportively with warmth, appropriate oxygen administration, isotonic fluid infusion, and close monitoring. Among the infants who received alkali, 14 of 26 acquired the respiratory distress syndrome (RDS), 11 died, and four had intracranial hemorrhage. Among babies who received no alkali, RDS occurred in 11 of 27, 5 died, and none had intracranial hemorrhage. These results do not support the common practice of rapidly infusing NaHCO3 into high-risk, premature infants, and they suggest that the early management of such infants needs renewed critical evaluation.},
-	language = {eng},
-	number = {3},
-	journal = {American Journal of Obstetrics and Gynecology},
-	author = {Bland, R. D. and Clarke, T. L. and Harden, L. B.},
-	month = feb,
-	year = {1976},
-	pmid = {2013},
-	keywords = {Humans, Hydrogen-Ion Concentration, Acidosis, Albumins, Bicarbonates, Carbon Dioxide, Cerebral Hemorrhage, Female, Hawaii, Infant, Newborn, Infant, Premature, Diseases, Infusions, Parenteral, Male, Prospective Studies, Respiratory Distress Syndrome, Newborn, Sodium, Time Factors},
-	pages = {263--267},
+	file = {S1070428009120124.pdf:/home/stefanom/GoogleDrive/Zot/S1070428009120124.pdf:application/pdf;Synthesis of pyrazoles and pyrazolones from 1,3- and 1,4-diketones of the adamantane series:/home/stefanom/Zotero/storage/KNGVLAWP/10.1134@S1070428009120124.pdf.pdf:application/pdf;Synthesis of pyrazoles and pyrazolones from 1,3- and 1,4-diketones of the adamantane series:/home/stefanom/Zotero/storage/69JEM22R/10.1134@S1070428009120124.pdf.pdf:application/pdf},
 }
 
 @article{carlucci_heterometallic_2010,
@@ -196,7 +178,7 @@
 	month = nov,
 	year = {2010},
 	pages = {12328--12341},
-	file = {Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New.pdf:/home/stefanom/GoogleDrive/Zot/Carlucci_et_al_2010_Heterometallic_Modular_Metal–Organic_3D_Frameworks_Assembled_via_New2.pdf:application/pdf},
+	file = {carlucci_et_al_2010_heterometallic_modular_metal–organic_3d_frameworks_assembled_via_new.pdf:/home/stefanom/GoogleDrive/Università/Zot/Chemistry – A European Journal/2010/carlucci_et_al_2010_heterometallic_modular_metal–organic_3d_frameworks_assembled_via_new.pdf:application/pdf;Submitted Version:/home/stefanom/Zotero/storage/E262I2HN/Carlucci et al. - 2010 - Heterometallic Modular Metal–Organic 3D Frameworks.pdf:application/pdf},
 }
 
 @article{rodriguez-villar_design_2021,
@@ -214,7 +196,7 @@
 	month = feb,
 	year = {2021},
 	pages = {176},
-	file = {Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:/home/stefanom/GoogleDrive/Zot/Rodríguez-Villar et al_2021_Design, Synthesis and Anticandidal Evaluation of Indazole and Pyrazole.pdf:application/pdf},
+	file = {rodríguez-villar_et_al_2021_design,_synthesis_and_anticandidal_evaluation_of_indazole_and_pyrazole.pdf:/home/stefanom/GoogleDrive/Università/Zot/Pharmaceuticals/2021/rodríguez-villar_et_al_2021_design,_synthesis_and_anticandidal_evaluation_of_indazole_and_pyrazole.pdf:application/pdf},
 }
 
 @article{yaghi_hydrothermal_1995,
@@ -231,39 +213,7 @@
 	month = oct,
 	year = {1995},
 	pages = {10401--10402},
-}
-
-@article{makar_formate_1975,
-	title = {Formate assay in body fluids: application in methanol poisoning},
-	volume = {13},
-	issn = {0006-2944},
-	shorttitle = {Formate assay in body fluids},
-	doi = {10.1016/0006-2944(75)90147-7},
-	language = {eng},
-	number = {2},
-	journal = {Biochemical Medicine},
-	author = {Makar, A. B. and McMartin, K. E. and Palese, M. and Tephly, T. R.},
-	month = jun,
-	year = {1975},
-	pmid = {1},
-	keywords = {Animals, Humans, Hydrogen-Ion Concentration, Carbon Dioxide, Aldehyde Oxidoreductases, Body Fluids, Formates, Haplorhini, Kinetics, Methanol, Methods, Pseudomonas},
-	pages = {117--126},
-}
-
-@article{odelola_characterization_1975,
-	title = {Characterization of {Nigerian} strains of {West} {Nile} virus by plaque formation},
-	volume = {19},
-	issn = {0001-723X},
-	abstract = {Seven strains of West nile virus isolated in Nigeria were investigated for their ability to form plaques in monkey kidney cell monolayers. Five strains antigenically related to one another produced plaques of about the same size 3 to 4 days after the addition of the overlay medium. The two other strains closely related to each other produced no plaques. Their inability to produce plaques was regarded as a significant characteristic of the intratypic group to which the two strains belong.},
-	language = {eng},
-	number = {6},
-	journal = {Acta Virologica},
-	author = {Odelola, H. A. and Koza, J.},
-	month = nov,
-	year = {1975},
-	pmid = {1995},
-	keywords = {Animals, Kidney, Haplorhini, Ascitic Fluid, Cell Line, Cercopithecus, Cross Reactions, Immune Sera, Mice, Neutralization Tests, Nigeria, Viral Plaque Assay, Virus Replication, West Nile virus},
-	pages = {489--492},
+	file = {Hydrothermal Synthesis of a Metal-Organic Framework Containing Large Rectangular Channels:/home/stefanom/Zotero/storage/4YYTUB7Y/yaghi1995.pdf.pdf:application/pdf},
 }
 
 @article{desiraju_chemistry_2001,
@@ -280,6 +230,7 @@
 	month = jul,
 	year = {2001},
 	pages = {397--400},
+	file = {desiraju_2001_chemistry_beyond_the_molecule.pdf:/home/stefanom/GoogleDrive/Università/Zot/Nature/2001/desiraju_2001_chemistry_beyond_the_molecule.pdf:application/pdf},
 }
 
 @article{vigato_evolution_2009,
@@ -296,6 +247,7 @@
 	month = apr,
 	year = {2009},
 	pages = {1099--1201},
+	file = {The evolution of β-diketone or β-diketophenol ligands and related complexes:/home/stefanom/Zotero/storage/2XGM78PS/vigato2009.pdf.pdf:application/pdf;The evolution of β-diketone or β-diketophenol ligands and related complexes:/home/stefanom/Zotero/storage/MJMB377U/vigato2009.pdf.pdf:application/pdf;Vigato_et_al_2009_The_evolution_of_β-diketone_or_β-diketophenol_ligands_and_related_complexes.pdf:/home/stefanom/GoogleDrive/Zot/Vigato_et_al_2009_The_evolution_of_β-diketone_or_β-diketophenol_ligands_and_related_complexes.pdf:application/pdf},
 }
 
 @article{aromi_poly_2008,
@@ -313,6 +265,7 @@
 	month = apr,
 	year = {2008},
 	pages = {964--989},
+	file = {aromí_et_al_2008_poly_beta-diketones.pdf:/home/stefanom/GoogleDrive/Università/Zot/Coordination Chemistry Reviews/2008/aromí_et_al_2008_poly_beta-diketones.pdf:application/pdf},
 }
 
 @article{cong_highly_2021,
@@ -329,7 +282,6 @@
 	month = dec,
 	year = {2021},
 	pages = {20055--20058},
-	file = {Cong_et_al_2021_Highly_Water-Permeable_Metal–Organic_Framework_MOF-303_Membranes_for.pdf:/home/stefanom/GoogleDrive/Zot/Cong_et_al_2021_Highly_Water-Permeable_Metal–Organic_Framework_MOF-303_Membranes_for.pdf:application/pdf},
 }
 
 @article{zheng_broadly_2022,
@@ -362,7 +314,7 @@
 	month = feb,
 	year = {2018},
 	pages = {197--206},
-	file = {Elgrishi_et_al_2018_A_Practical_Beginner’s_Guide_to_Cyclic_Voltammetry.pdf:/home/stefanom/GoogleDrive/Zot/Elgrishi_et_al_2018_A_Practical_Beginner’s_Guide_to_Cyclic_Voltammetry.pdf:application/pdf},
+	file = {elgrishi_et_al_2018_a_practical_beginner’s_guide_to_cyclic_voltammetry.pdf:/home/stefanom/GoogleDrive/Università/Zot/Journal of Chemical Education/2018/elgrishi_et_al_2018_a_practical_beginner’s_guide_to_cyclic_voltammetry.pdf:application/pdf},
 }
 
 @article{pluczyk_using_2018,
@@ -378,5 +330,165 @@
 	month = oct,
 	year = {2018},
 	pages = {56656},
-	file = {Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:/home/stefanom/GoogleDrive/Zot/Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:application/pdf},
+	file = {Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:/home/stefanom/GoogleDrive/Zot/Pluczyk_et_al_2018_Using_Cyclic_Voltammetry,_UV-Vis-NIR,_and_EPR_Spectroelectrochemistry_to.pdf:application/pdf;Using Cyclic Voltammetry, UV-Vis-NIR, and EPR Spectroelectrochemistry to Analyze Organic Compounds:/home/stefanom/Zotero/storage/W575F3HG/9f08168d823137a1be8f90d4c7782f69.pdf.pdf:application/pdf;Using Cyclic Voltammetry, UV-Vis-NIR, and EPR Spectroelectrochemistry to Analyze Organic Compounds:/home/stefanom/Zotero/storage/ZVVYLHXU/9f08168d823137a1be8f90d4c7782f69.pdf.pdf:application/pdf},
+}
+
+@article{begue_fluorinated_2004,
+	title = {Fluorinated {Alcohols}: {A} {New} {Medium} for {Selective} and {Clean} {Reaction}},
+	issn = {0936-5214, 1437-2096},
+	shorttitle = {Fluorinated {Alcohols}},
+	url = {http://www.thieme-connect.de/DOI/DOI?10.1055/s-2003-44973},
+	doi = {10.1055/s-2003-44973},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-10},
+	journal = {Synlett},
+	author = {Bégué, Jean-Pierre and Bonnet-Delpon, Danièle and Crousse, Benoit},
+	year = {2004},
+	pages = {18--29},
+	file = {bégué_et_al_2004_fluorinated_alcohols.pdf:/home/stefanom/GoogleDrive/Università/Zot/Synlett/2004/bégué_et_al_2004_fluorinated_alcohols.pdf:application/pdf},
+}
+
+@article{leavai_synthesis_2002,
+	title = {Synthesis of 2-pyrazolines by the reactions of α,β-unsaturated aldehydes, ketones, and esters with diazoalkanes, nitrile imines, and hydrazines},
+	volume = {39},
+	issn = {0022-152X},
+	doi = {10.1002/jhet.5570390101},
+	language = {eng},
+	number = {1},
+	journal = {Journal of heterocyclic chemistry},
+	author = {Léavai, Albert},
+	year = {2002},
+	note = {Place: Hoboken
+Publisher: Wiley-Blackwell},
+	pages = {1--13},
+	file = {Synthesis of 2-pyrazolines by the reactions of α,β-unsaturated aldehydes, ketones, and esters with diazoalkanes, nitrile imines, and hydrazines:/home/stefanom/Zotero/storage/V2SD39UL/10.1002@jhet.5570390101.pdf.pdf:application/pdf},
+}
+
+@article{pimenov_interaction_2004,
+	title = {Interaction of α,β-{Unsaturated} {Ketones} of the {Adamantane} {Series} with {N},{N}'-{Binucleophiles}},
+	volume = {40},
+	issn = {1573-8353},
+	url = {https://doi.org/10.1023/B:COHC.0000037312.60476.60},
+	doi = {10.1023/B:COHC.0000037312.60476.60},
+	abstract = {The influence has been established of the structure of the initial ketone, the reactants, and the reaction conditions on the direction of the interaction of α,β-unsaturated ketones of the adamantane series with hydrazine, phenylhydrazine, semicarbazide, thiosemicarbazide, urea, and thiourea. It was found that on interaction with hydrazine and phenylhydrazine both intermediate hydrazones and the final cyclization products, pyrazolines, were formed. Reaction with semicarbazide and thiosemicarbazide leads only to the synthesis of derivatives at the carbonyl group, semicarbazones and thiosemicarbazones, but with urea and thiourea leads to products of addition at the double bond.},
+	language = {en},
+	number = {5},
+	urldate = {2023-07-12},
+	journal = {Chemistry of Heterocyclic Compounds},
+	author = {Pimenov, A. A. and Makarova, N. V. and Moiseev, I. K. and Zemtsova, M. N.},
+	month = may,
+	year = {2004},
+	keywords = {addition, hydrazones, pyrazolines, semicarbazones, thiosemicarbazones, thioureas, ureas, α,β-enones, α,β-unsaturated ketones},
+	pages = {575--581},
+	file = {pimenov_et_al_2004_interaction_of_α,β-unsaturated_ketones_of_the_adamantane_series_with.pdf:/home/stefanom/GoogleDrive/Università/Zot/Chemistry of Heterocyclic Compounds/2004/pimenov_et_al_2004_interaction_of_α,β-unsaturated_ketones_of_the_adamantane_series_with.pdf:application/pdf},
+}
+
+@article{raiford_-unsaturated_1938,
+	title = {α,β-{UNSATURATED} {KETONES} {OBTAINED} {FROM} {ACETOPHENONE}, {AND} {THEIR} {REACTION} {WITH} {PHENYLHYDRAZINE}},
+	volume = {03},
+	issn = {0022-3263, 1520-6904},
+	url = {https://pubs.acs.org/doi/abs/10.1021/jo01220a009},
+	doi = {10.1021/jo01220a009},
+	language = {en},
+	number = {3},
+	urldate = {2023-07-12},
+	journal = {The Journal of Organic Chemistry},
+	author = {Raiford, L. Chas. and Gundy, Glen V.},
+	month = jul,
+	year = {1938},
+	pages = {265--272},
+	file = {α,β-UNSATURATED KETONES OBTAINED FROM ACETOPHENONE, AND THEIR REACTION WITH PHENYLHYDRAZINE:/home/stefanom/Zotero/storage/NRKBY3AW/raiford1938.pdf.pdf:application/pdf},
+}
+
+@article{priecel_advantages_2019,
+	title = {Advantages and {Limitations} of {Microwave} {Reactors}: {From} {Chemical} {Synthesis} to the {Catalytic} {Valorization} of {Biobased} {Chemicals}},
+	volume = {7},
+	shorttitle = {Advantages and {Limitations} of {Microwave} {Reactors}},
+	url = {https://doi.org/10.1021/acssuschemeng.8b03286},
+	doi = {10.1021/acssuschemeng.8b03286},
+	abstract = {This critical review examines recent scientific and patent literature in the application of microwave reactors for catalytic transformation of biomass and biomass-derived molecules with a particular emphasis on heterogeneous catalysis. Several recent reports highlight dramatic reductions in reaction time and even superior selectivity when microwaves are used. However, there are still many controversies and unexplained effects in this area that deserve attention. We critically review the available sources attempting to establish trends and elucidate the actual status of this area of research. Additionally, where possible, we discuss the potential for scale-up and commercial utilization of microwaves and impediments that currently hold back their implementation. This critical review aims at highlighting the opportunity of combining catalysis with microwave technology for biomass conversion but also to stimulate the reader to generate future understanding of the influence of the microwaves in catalytic processes in general.},
+	number = {1},
+	urldate = {2023-07-24},
+	journal = {ACS Sustainable Chemistry \& Engineering},
+	author = {Priecel, Peter and Lopez-Sanchez, Jose Antonio},
+	month = jan,
+	year = {2019},
+	note = {Publisher: American Chemical Society},
+	pages = {3--21},
+	file = {ACS Full Text Snapshot:/home/stefanom/Zotero/storage/KG3RMVI4/acssuschemeng.html:text/html;Full Text:/home/stefanom/Zotero/storage/T664GDR8/Priecel and Lopez-Sanchez - 2019 - Advantages and Limitations of Microwave Reactors .pdf:application/pdf;Priecel_Lopez-Sanchez_2019_Advantages and Limitations of Microwave Reactors.pdf:/home/stefanom/GoogleDrive/Zot/Priecel_Lopez-Sanchez_2019_Advantages and Limitations of Microwave Reactors.pdf:application/pdf;Priecel_Lopez-Sanchez_2019_Advantages_and_Limitations_of_Microwave_Reactors.pdf:/home/stefanom/GoogleDrive/Zot/Priecel_Lopez-Sanchez_2019_Advantages_and_Limitations_of_Microwave_Reactors.pdf:application/pdf},
+}
+
+@article{rana_microwave_2014,
+	title = {Microwave {Reactors}: {A} {Brief} {Review} on {Its} {Fundamental} {Aspects} and {Applications}},
+	volume = {01},
+	issn = {2333-9705, 2333-9721},
+	shorttitle = {Microwave {Reactors}},
+	url = {http://www.oalib.com/paper/pdf/3096250},
+	doi = {10.4236/oalib.1100686},
+	abstract = {Improved laboratory protocols for convenient and rapid transformations are highly desired in modern synthetic chemistry. Microwave irradiated reactions have received considerable attention in recent years and it is a subject of intense discussion in the scientific community. Microwave heating is more efficient in terms of the energy used, produces higher temperature homogeneity and is considerably more rapid than conventional heating methods. This technique as an alternative to conventional energy sources for introduction of energy into reactions has become a recognized practical method in various fields of chemistry. Microwave-assisted organic synthesis (MAOS) is known for the spectacular accelerations produced in many reactions as a consequence of the increased heating rate, a phenomenon that cannot be easily reproduced by classical heating means. As a result, higher yields, milder reaction conditions and shorter reaction times can often be attained. Its specific heating method attracts extensive interest not only because of rapid volumetric heating, but also for suppressed side reactions, energy saving, decreased environmental pollutions and safe operations. In this review, we will try to represent an overview on origin and fundamental features of microwave ovens and its usefulness in MAOS.},
+	language = {en},
+	number = {06},
+	urldate = {2023-07-24},
+	journal = {OALib},
+	author = {Rana, Kalyan Kumar and Rana, Suparna},
+	year = {2014},
+	pages = {1--20},
+	file = {Rana and Rana - 2014 - Microwave Reactors A Brief Review on Its Fundamen.pdf:/home/stefanom/Zotero/storage/6EVPCV69/Rana and Rana - 2014 - Microwave Reactors A Brief Review on Its Fundamen.pdf:application/pdf},
+}
+
+@article{azarifar_microwave-assisted_2003,
+	title = {Microwave-{Assisted} {Synthesis} of {Some} 3,5-{Arylated} 2-{Pyrazolines}},
+	volume = {8},
+	copyright = {http://creativecommons.org/licenses/by/3.0/},
+	issn = {1420-3049},
+	url = {https://www.mdpi.com/1420-3049/8/8/642},
+	doi = {10.3390/80800642},
+	abstract = {Condensation of 2-acetylnaphthalene with benzaldehydes under microwave irradiation affords chalcones which undergo facile and clean cyclizations with hydrazines RNHNH2 (R= H, Ph, Ac) to afford 3,5-arylated 2-pyrazolines in quantitative yields, also under microwave irradiation and in the presence of dry AcOH as cyclizing agent. The results obtained indicate that, unlike classical heating, microwave irradiation results in higher yields, shorter reaction times (2-12 min.) and cleaner reactions.},
+	language = {en},
+	number = {8},
+	urldate = {2023-07-25},
+	journal = {Molecules},
+	author = {Azarifar, Davood and Ghasemnejad, Hassan},
+	month = aug,
+	year = {2003},
+	note = {Number: 8
+Publisher: Molecular Diversity Preservation International},
+	keywords = {pyrazolines, 3, 5-arylated-2-pyrazolines, chalcones, heterocyclic synthesis, Microwave irradiation},
+	pages = {642--648},
+	file = {Azarifar_Ghasemnejad_2003_Microwave-Assisted Synthesis of Some 3,5-Arylated 2-Pyrazolines.pdf:/home/stefanom/GoogleDrive/Zot/Azarifar_Ghasemnejad_2003_Microwave-Assisted Synthesis of Some 3,5-Arylated 2-Pyrazolines.pdf:application/pdf;Azarifar_Ghasemnejad_2003_Microwave-Assisted_Synthesis_of_Some_3,5-Arylated_2-Pyrazolines.pdf:/home/stefanom/GoogleDrive/Zot/Azarifar_Ghasemnejad_2003_Microwave-Assisted_Synthesis_of_Some_3,5-Arylated_2-Pyrazolines.pdf:application/pdf;Full Text PDF:/home/stefanom/Zotero/storage/IT336RB3/Azarifar and Ghasemnejad - 2003 - Microwave-Assisted Synthesis of Some 3,5-Arylated .pdf:application/pdf},
+}
+
+@article{levai_synthesis_2006,
+	title = {Synthesis of 1-substituted 3,5-diaryl-2-pyrazolines by the reaction of α,β-unsaturated ketones with hydrazines},
+	volume = {43},
+	issn = {0022152X, 19435193},
+	url = {https://onlinelibrary.wiley.com/doi/10.1002/jhet.5570430117},
+	doi = {10.1002/jhet.5570430117},
+	language = {en},
+	number = {1},
+	urldate = {2023-07-26},
+	journal = {Journal of Heterocyclic Chemistry},
+	author = {Lévai, Albert and Jekö, József},
+	month = jan,
+	year = {2006},
+	pages = {111--115},
+	file = {lévai_et_al_2006_synthesis_of_1-substituted_3,5-diaryl-2-pyrazolines_by_the_reaction_of.pdf:/home/stefanom/GoogleDrive/Università/Zot/Journal of Heterocyclic Chemistry/2006/lévai_et_al_2006_synthesis_of_1-substituted_3,5-diaryl-2-pyrazolines_by_the_reaction_of.pdf:application/pdf},
+}
+
+@article{hoz_mechanism_2021,
+	title = {The mechanism of the reaction of hydrazines with α,β-unsaturated carbonyl compounds to afford hydrazones and 2-pyrazolines (4,5-dihydro-{1H}-pyrazoles): {Experimental} and theoretical results},
+	volume = {97},
+	issn = {00404020},
+	shorttitle = {The mechanism of the reaction of hydrazines with α,β-unsaturated carbonyl compounds to afford hydrazones and 2-pyrazolines (4,5-dihydro-{1H}-pyrazoles)},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0040402021006724},
+	doi = {10.1016/j.tet.2021.132413},
+	language = {en},
+	urldate = {2023-07-26},
+	journal = {Tetrahedron},
+	author = {Hoz, Antonio De La and Alkorta, Ibon and Elguero, José},
+	month = sep,
+	year = {2021},
+	pages = {132413},
+	file = {hoz_et_al_2021_the_mechanism_of_the_reaction_of_hydrazines_with_α,β-unsaturated_carbonyl.pdf:/home/stefanom/GoogleDrive/Università/Zot/Tetrahedron/2021/hoz_et_al_2021_the_mechanism_of_the_reaction_of_hydrazines_with_α,β-unsaturated_carbonyl.pdf:application/pdf;The mechanism of the reaction of hydrazines with α,β-unsaturated carbonyl compounds to afford hydrazones and 2-pyrazolines (4,5-dihydro-1H-pyrazoles)\: Experimental and theoretical results:/home/stefanom/Zotero/storage/AXHUDPSG/S0040402021006724.pdf.pdf:application/pdf},
 }
